GNOME Bugzilla – Bug 759525
ivtc: Fix value memory leak
Last modified: 2015-12-16 09:01:11 UTC
Fix memory leak ==23170== 56 bytes in 2 blocks are definitely lost in loss record 1,899 of 2,177 ==23170== at 0x402C17C: malloc (in /usr/lib/valgrind/vgpreload_memcheck-x86-linux.so) ==23170== by 0x421CBE2: g_malloc (in /lib/i386-linux-gnu/libglib-2.0.so.0.4002.0) ==23170== by 0x4233281: g_slice_alloc (in /lib/i386-linux-gnu/libglib-2.0.so.0.4002.0) ==23170== by 0x41E9219: g_array_sized_new (in /lib/i386-linux-gnu/libglib-2.0.so.0.4002.0) ==23170== by 0x41E934F: g_array_new (in /lib/i386-linux-gnu/libglib-2.0.so.0.4002.0) ==23170== by 0x40EBF9A: gst_value_init_list_or_array (gstvalue.c:284) ==23170== by 0x41B1B7D: g_value_reset (in /usr/lib/i386-linux-gnu/libgobject-2.0.so.0.4002.0) ==23170== by 0x417495A: gst_ivtc_transform_caps (gstivtc.c:172) ==23170== by 0x616CA1C: gst_base_transform_transform_caps (gstbasetransform.c:536) ==23170== by 0x6171CFA: gst_base_transform_default_query (gstbasetransform.c:757) ==23170== by 0x616EF5B: gst_base_transform_query (gstbasetransform.c:1622) ==23170== by 0x40A97F9: gst_pad_query (gstpad.c:3898)
Created attachment 317472 [details] [review] Fix gvalue memory leak
commit 720b9bef05000ca54f4a4fba093e334d2bbb4d2b Author: Vineeth TM <vineeth.tm@samsung.com> Date: Wed Dec 16 14:32:20 2015 +0900 ivtc: Fix value memory leak gvalue variable should be unset instead of reset. https://bugzilla.gnome.org/show_bug.cgi?id=759525